# SmartInterview

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
backend/: main.py  schemas.py  session_store.py
backend/api/: interview.py  voice.py
config/: settings.py
core/: code_runner.py  leetcode_manager.py  session_manager.py
core/agent/: graph.py  nodes.py  states.py
core/data/: leetcode_hot100.json  question_bank.json
core/interview/: evaluator.py  question_gen.py  reporter.py
core/llm/: prompts.py  providers.py  thinker.py
core/rag/: embeddings.py  question_bank_rag.py  retriever.py  vectorstore.py
core/resume/: extractor.py  parser.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/interview/[id]/: page.tsx
frontend/src/app/report/[id]/: page.tsx
frontend/src/components/: chat-message.tsx  code-editor.tsx  interview-sidebar.tsx  report-cards.tsx  resume-panel.tsx  settings-dialog.tsx  voice-recorder.tsx
frontend/src/hooks/: use-interview.ts  use-voice.ts
frontend/src/lib/: api.ts
frontend/src/types/: interview.ts
interfaces/: text_interface.py  voice_interface.py
