[project]
name = "smartinterview"
version = "1.0.0"
description = "AI-powered mock interview coach with RAG question bank, LangGraph agent, multi-LLM support, and voice interaction."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.31.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "sentence-transformers>=2.2.0",
    "dashscope>=1.20.0",
]
